Finished account page editing and image upload
Signed-off-by: Reece Donovan <reecedonovan99@gmail.com>

--- a/account-client/src/index.css
+++ b/account-client/src/index.css
@@ -25,6 +25,10 @@
     @apply bg-gray-200 text-black text-opacity-70;
   }
 
+  .btn-red {
+    @apply bg-red-600 text-white;
+  }
+
   .btn-blue:hover {
     @apply bg-blue-600;
   }
