Adding user profile image to nav bar
Signed-off-by: Reece Donovan <reecedonovan99@gmail.com>

--- a/tasks-client/src/App.scss
+++ b/tasks-client/src/App.scss
@@ -1,5 +1,13 @@
+$navbar-height: 4.5rem;
+
 @import "~bulma/bulma.sass";
 
 .navbar-item {
-  cursor: pointer;
+  img {
+    max-height: 48px;
+  }
+}
+
+.navbar-end {
+  padding-right: 1.5rem;
 }
