--- a/tasks-client/src/App.scss
+++ b/tasks-client/src/App.scss
@@ -1,33 +1,8 @@
 @import "~bulma/bulma.sass";
 
-.is-sidebar-menu {
-  padding: 2.5rem;
-  background: $grey-dark;
-  li {
-    a {
-      color: $white;
-    }
-  }
+.box-shadow-y {
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.5);
 }
-.columns {
-  &.is-fullheight {
-    min-height: calc(100vh - (#{$navbar-height} - 0.75rem));
-    max-height: calc(100vh - (#{$navbar-height} - 0.75rem));
-    height: calc(100vh - (#{$navbar-height} - 0.75rem));
-    display: flex;
-    flex-direction: row;
-    justify-content: stretch;
-    .column {
-      overflow-y: auto;
-    }
-  }
-}
-.is-main-content {
-  background: $grey-lighter;
-}
-
-$navbar-height: 4.5rem;
-$tablet: 768px;
 
 .navbar-item {
   img {
@@ -36,6 +11,85 @@ $tablet: 768px;
   }
 }
 
-.navbar-end {
-  padding-right: 1.5rem;
+html,
+body {
+  height          : 100%;
+  background-color: #efefef;
 }
+
+html.has-navbar-fixed-top,
+body.has-navbar-fixed-top {
+  padding-top: 3.9rem;
+}
+
+.px-1,
+.p-1 {
+  padding-left : 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-1,
+.p-1 {
+  padding-top   : 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.box-shadow-y {
+  box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.05);
+}
+
+.menu-container {
+  position        : fixed;
+  bottom          : 0;
+  margin          : auto;
+  min-width       : 300px;
+  z-index         : 10;
+  background-color: transparent;
+  transform       : translateX(-100%);
+  transition      : all ease 0.5s;
+}
+
+.menu-container.active {
+  transform: translateX(0%);
+}
+
+.icon {
+  height         : 30px;
+  width          : 30px;
+  vertical-align : baseline;
+  display        : inline-flex;
+  justify-content: center;
+  align-items    : center;
+}
+
+.toggler {
+  margin-left: 0;
+  cursor     : pointer;
+}
+
+@media (min-width: 769px) {
+  .menu-container {
+    width    : 25%;
+    min-width: auto;
+    transform: translateX(0%);
+  }
+}
+
+@media (min-width: 1024px) {
+  .menu-container {
+    width    : 16.6667%;
+    min-width: auto;
+    transform: translateX(0%);
+  }
+}
+
+.is-sidebar-menu {
+  min-height: calc(100vh - (#{$navbar-height} + 0.75rem));
+  max-height: calc(100vh - (#{$navbar-height} + 0.75rem));
+  height    : calc(100vh - (#{$navbar-height} + 0.75rem));
+}
+
+.is-hoverable > .image {
+  padding: 0 2.5rem 0 0 !important;
+}
+
