--- a/project-client/src/styles/tailwind.css
+++ b/project-client/src/styles/tailwind.css
@@ -1,3 +1,5 @@
+@import "react-big-calendar/lib/css/react-big-calendar.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,4 +17,10 @@
   .button.blue.hollow {
     @apply text-blue-500 bg-transparent border-blue-500;
   }
+}
+
+html,
+body,
+#__next {
+  @apply min-h-full;
 }
